# server/src/main/java/com/tailoredshapes/inventoryserver/Router.java
@@ -1,5 +1,6 @@
 package com.tailoredshapes.inventoryserver;
 
+import java.util.Collection;
 import java.util.List;
 
 import com.tailoredshapes.inventoryserver.dao.DAO;
@@ -12,6 +13,8 @@ import com.tailoredshapes.inventoryserver.repositories.hibernate.HibernateReposi
 
 import org.json.JSONArray;
 import org.json.JSONObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.persistence.EntityManager;
 import javax.persistence.EntityManagerFactory;
@@ -28,14 +31,19 @@ import static com.tailoredshapes.inventoryserver.Providers.userList;
 import static com.tailoredshapes.inventoryserver.Providers.userParser;
 import static com.tailoredshapes.inventoryserver.Providers.userSerialiser;
 import static com.tailoredshapes.inventoryserver.Providers.userUrlBuilder;
+import static com.tailoredshapes.underbar.UnderBar.filter;
+import static com.tailoredshapes.underbar.UnderBar.first;
 import static com.tailoredshapes.underbar.UnderBar.map;
 import static spark.Spark.get;
 import static spark.Spark.post;
 
 
 public interface Router {
+  Logger log = LoggerFactory.getLogger(Router.class);
+
   static void route(EntityManagerFactory emf) {
     get("/inventories", "application/json", (req, res) -> {
+      log.debug("allInventories");
       res.type("application/json");
       return persistent(emf, (em) -> inventoryList.apply(em).list());
     }, (result) -> {
@@ -46,6 +54,7 @@ public interface Router {
 
     post("/inventories", "application/json", (req, res) ->
       transactional(emf, (em) -> {
+        log.debug("createInventory");
         DAO<Inventory> dao = inventoryDAO.apply(em);
         Parser<Inventory> parser = inventoryParser.apply(em);
         Inventory inventory = parser.parse(req.body());
@@ -57,6 +66,7 @@ public interface Router {
 
     get("/inventories/:id", "application/json", (req, res) ->
       persistent(emf, (em) -> {
+        log.debug("readInventory");
         res.type("application/json");
         Repository.FindById<Inventory> byId = HibernateRepository.findById(Inventory.class, em);
         return byId.findById(Long.parseLong(req.params("id")));
@@ -65,6 +75,7 @@ public interface Router {
     );
 
     get("/users", "application/json", (req, res) -> {
+          log.debug("allUsers");
           res.type("application/json");
           return persistent(emf, (em) ->
             userList.apply(em).list());
@@ -76,6 +87,7 @@ public interface Router {
 
     post("/users", "application/json", (req, res) ->
       transactional(emf, (em) -> {
+        log.debug("createUser");
         DAO<User> dao = userDAO.apply(em);
         Parser<User> parser = userParser.apply(em);
         User user = parser.parse(req.body());
@@ -85,17 +97,62 @@ public interface Router {
         return null;
       }));
 
-    get("/users/:name/:id", "application/json", (req, res) -> persistent(emf, (em) -> {
-          res.type("application/json");
-          Repository.FindById<User> byId = HibernateRepository.findById(User.class, em);
-          return byId.findById(Long.parseLong(req.params("id")));
-        }),
+
+    get("/users/:name/inventories", "application/json", (req, res) ->
+          persistent(emf, (em) -> {
+            log.debug("allInventoriesForUser");
+            res.type("application/json");
+            Repository.FindBy<User, EntityManager> findBy = HibernateRepository.findBy(em);
+            User user = findBy.findBy(HibernateLookers.userByName.lookFor(req.params("name")));
+            return user.getInventories();
+          })
+      , (result) -> {
+        JSONArray resp =
+          new JSONArray(map((Collection<Inventory>) result, (i) -> new JSONObject(inventorySerialiser.serialise(i))));
+        return resp.toString();
+      });
+
+
+    get("/users/:name", "application/json", (req, res) -> transactional(emf, (em) -> {
+      log.debug("findLatestUser");
+      Repository.FindBy<User, EntityManager> findBy = HibernateRepository.findBy(em);
+
+      User user = findBy.findBy(HibernateLookers.userByName.lookFor(req.params("name")));
+
+      res.redirect(userUrlBuilder.build(user));
+      return null;
+    }));
+
+    get("/users/:name/:id", "application/json", (req, res) ->
+          persistent(emf, (em) -> {
+            log.debug("getUser");
+            res.type("application/json");
+            Repository.FindById<User> byId = HibernateRepository.findById(User.class, em);
+            return byId.findById(Long.parseLong(req.params("id")));
+          }),
         (result) -> userSerialiser.serialise((User) result));
 
-    post("/users/:name/inventories/:category", (req, res) -> transactional(emf, (em) -> {
+    get("/users/:name/inventories/:category", "application/json", (req, res) -> transactional(emf, (em) -> {
+      log.debug("getInventoryForUser");
+      Repository.FindBy<User, EntityManager> findBy = HibernateRepository.findBy(em);
+
+      User user = findBy.findBy(HibernateLookers.userByName.lookFor(req.params("name")));
+
+      Inventory inv =
+        first(filter(user.getInventories(), (i) -> i.getCategory().getFullname().equals(req.params("category"))));
+
+      res.redirect(inventoryUrlBuilder.build(inv));
+
+      return null;
+    }));
+
+    post("/users/:name/inventories/:category", "application/json", (req, res) -> transactional(emf, (em) -> {
+      log.debug("updateInventoryForUser");
       Repository.FindBy<User, EntityManager> findBy = HibernateRepository.findBy(em);
       DAO<Inventory> dao = inventoryDAO.apply(em);
+      DAO<User> userDao = userDAO.apply(em);
       Repository.Save<Inventory> saver = Repository.save(dao);
+      Repository.Save<User> userSaver = Repository.save(userDao);
       Parser<Inventory> parser = inventoryParser.apply(em);
 
       User user = findBy.findBy(HibernateLookers.userByName.lookFor(req.params("name")));
@@ -104,6 +161,8 @@ public interface Router {
       Inventory inv = parser.parse(req.body());
       Inventory saved = saver.save(inv);
       user.getInventories().add(saved);
+
+      userSaver.save(user);
 
       res.redirect(inventoryUrlBuilder.build(saved));
 
